# Maze3D

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
app/: CMakeLists.txt
app/include/app/controllers/: EditorFlyController.h  FPSController.h  ICameraController.h  MeshSculptController.h
app/src/controllers/: EditorFlyController.cpp  FPSController.cpp  MeshSculptController.cpp
assets/shaders/: basic.frag  basic.vert  ceiling.frag  floor.frag  hedge.frag  hedge.vert  highlight.frag  highlight.vert  player.frag  player2.frag  player2.vert  player3.frag  wall.frag  wall.vert  wall2.frag  wall2.vert
cmake/: FetchDependencies.cmake
editor/: CMakeLists.txt
editor/include/editor/: EditorViewport.h
editor/src/: .main.cpp.kate-swp  EditorViewport.cpp  main.cpp
engine/: .CMakeLists.txt.kate-swp  CMakeLists.txt
engine/include/engine/controllers/: FPSController.h
engine/include/engine/maze/: Maze.h  MazeCollider.h  MazeConfig.h  MazeMesh.h  MazeTypes.h
engine/include/engine/render/: BoxRenderer.h  Camera.h  CapsuleMesh.h  CubeMesh.h  DynamicMesh.h  FPSCamera.h  Shader.h
engine/include/engine/scene/: BasicCamera.h  Camera.h  FPSCamera.h
engine/include/engine/window/: Window.h
engine/src/: engine_dummy.cpp
engine/src/controllers/: FPSController.cpp
engine/src/maze/: Maze.cpp  MazeCollider.cpp  MazeMesh.cpp
engine/src/render/: BoxRenderer.cpp  Camera.cpp  CapsuleMesh.cpp  CubeMesh.cpp  DynamicMesh.cpp  FPSCamera.cpp  Shader.cpp
engine/src/scene/: BasicCamera.cpp  FPSCamera.cpp
engine/src/window/: Window.cpp
game/: CMakeLists.txt
game/src/: .main.cpp.kate-swp  main.cpp
tools/: CMakeLists.txt
tools/mesh_sculpt/: CMakeLists.txt
tools/mesh_sculpt/include/tools/mesh_sculpt/: MeshSculptTool.h  MeshSculptUi.h
tools/mesh_sculpt/src/: MeshSculptTool.cpp  MeshSculptUi.cpp  main.cpp
